--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
 		<maven.compiler.target>11</maven.compiler.target>
 
 		<spring.version>5.1.9.RELEASE</spring.version>
+		<logback.version>1.2.3</logback.version>
+		<lombok.version>1.18.2</lombok.version>
 		<tomcat.version>9.0.35</tomcat.version>
 		<junit.version>4.13</junit.version>
 	</properties>
@@ -28,6 +30,17 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
