--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 		<maven.compiler.target>11</maven.compiler.target>
 
 		<spring.version>5.2.6.RELEASE</spring.version>
+		<spring.data.version>2.3.0.RELEASE</spring.data.version>
+
+		<hibernate.version>5.4.17.Final</hibernate.version>
+		<h2.database.version>1.4.200</h2.database.version>
+
 		<logback.version>1.2.3</logback.version>
 		<slf4j.version>1.7.30</slf4j.version>
 		<lombok.version>1.18.2</lombok.version>
@@ -37,6 +42,23 @@
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${spring.data.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>${h2.database.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
