--- a/build.gradle
+++ b/build.gradle
@@ -54,5 +54,11 @@ eclipse {
 		natures  'org.eclipse.wst.common.modulecore.ModuleCoreNature'
 		natures  'org.eclipse.buildship.core.gradleprojectnature'
 		natures  'org.eclipse.jdt.core.javanature'
+		
+		buildCommand 'org.eclipse.jdt.core.javabuilder'
+		buildCommand 'org.eclipse.buildship.core.gradleprojectbuilder'
+		buildCommand 'org.thymeleaf.extras.eclipse.core.ThymeleafBuilder'
+		buildCommand 'org.eclipse.wst.common.project.facet.core.builder'
+		buildCommand 'org.eclipse.wst.validation.validationbuilder'
 	}
 }
