文字コード

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,17 @@ dependencies {
 	testImplementation group: 'org.springframework', name: 'spring-test', version: '5.2.7.RELEASE'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
 }
+compileJava {
+    options.encoding = 'UTF-8'
+}
+
+compileTestJava {
+    options.encoding = 'UTF-8'
+}
+
+javadoc {
+    options.encoding = 'UTF-8'
+}
 
 eclipse {
 	project {
