--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,7 @@ plugins {
 }
 
 group = 'jp.mirageworld.spring'
-version = '0.0.1-SNAPSHOT'
-
-description = """spring-webmvc-demo Maven Webapp"""
+version = '0.0.1'
 
 sourceCompatibility = 11
 targetCompatibility = 11
